objects/PT_MROD_Revision__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>MROD Revisions</relationshipLabel>
        <relationshipName>MROD_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_MROD__c</fullName>
        <label>Current MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D1_Date__c</fullName>
        <label>D1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Shipping_Org__c</fullName>
        <label>Default Shipping Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_D1__c</fullName>
        <label>Expedite D1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <label>Expedite</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Location</label>
        <referenceTo>PT_Install_Location__c</referenceTo>
        <relationshipLabel>MROD Revisions</relationshipLabel>
        <relationshipName>MROD_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Location__c</fullName>
        <label>Installation Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Approval_Process_Type__c</fullName>
        <label>Latest Approval Process Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Days__c</fullName>
        <label>Lead Time Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MROD_FORECAST_DATE__c</fullName>
        <label>MROD FORECAST DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orderable_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orderable Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPL_Type__c</fullName>
        <label>PPL Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_List_Name_Rev__c</fullName>
        <label>Part List Name Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_List_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part List Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MROD Revisions</relationshipLabel>
        <relationshipName>MROD_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Administrator__c</fullName>
        <label>Program Administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_MROD_Rev__c</fullName>
        <label>Program MROD Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <label>Program Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Number__c</fullName>
        <label>Program Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>MROD Revisions</relationshipLabel>
        <relationshipName>MROD_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Qty__c</fullName>
        <label>Purchase Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_MROD__c</fullName>
        <label>Requested MROD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipsetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipset</label>
        <referenceTo>L2I_DSL__c</referenceTo>
        <relationshipLabel>MROD Revisions</relationshipLabel>
        <relationshipName>MROD_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipset_PPL_Link__c</fullName>
        <formula>Asset__r.Shipset_PPL_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipset PPL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipset_PPL__c</fullName>
        <formula>Asset__r.PT_Install_Location_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipset PPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipset__c</fullName>
        <label>Shipset</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <label>Sub Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_D1__c</fullName>
        <label>Use D1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MROD Revision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Program_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MROD Revision</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MROD Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>